--- a/.gitignore
+++ b/.gitignore
@@ -10,8 +10,8 @@
 *.pyc
 __pycache__/
 local_settings.py
-db.sqlite3
-db.sqlite3-journal
+; db.sqlite3
+; db.sqlite3-journal
 media
 
 # If your build process includes running collectstatic, then you probably don't need or want to include staticfiles/
@@ -121,12 +121,12 @@ celerybeat.pid
 
 # Environments
 .env
-.venv
+; .venv
 env/
-venv/
+; venv/
 ENV/
-env.bak/
-venv.bak/
+; env.bak/
+; venv.bak/
 
 # Spyder project settings
 .spyderproject
